# dotfiles

./: .gitignore  .gitmodules  README.md  README.org  desk.md  mouse.md  usb-audio.md  vfio.md  wayland.md
emacs/.emacs.d/: .gitignore  color-theme-vibi.el  init-customisations.el  init-keybindings.el  init-org.el  init-packages.el  init.el
emacs/.emacs.d/elisp/: init-customisations.el  init-functions.el  init-haskell.el  init-ibuffer.el  init-keybindings.el  init-org.el  init-packages.el
extrabits/: 99-sysctl.conf
extrabits/firefox/: user.js  userChrome.css
extrabits/keyd/: keyd.conf
git/: .gitconfig  .gitignore_global
haskell/: .ghci
haskell/.emacs-haskell/: emacs-haskell.cabal
haskell/.sublimehaskell/: sublimehaskell.cabal
machine_base/: .gitconfig  .gitignore_global  .haskeline  .pythonrc.py  .ripgreprc  .tigrc  .tmux.conf  .xbindkeysrc  .xinitrc
machine_base/.config/: chromium-flags.conf  starship.toml
machine_base/.config/alacritty/: alacritty.toml  alacritty.yml
machine_base/.config/ghostty/: config
machine_base/.config/nano/: nanorc
machine_base/.config/systemd/user/: walker.service
machine_base/.ssh/: .gitignore  config
machine_base/.ssh/config.d/: clarivate  ipa  vagrant  work
minmax/: .Xresources  .ackrc  .machineconf  .tmux.conf  .xinitrc
osx/: .amethyst  .machineconf
osx/.bin/: ec  toggle-osx-shadows
prime/: .machineconf
prime/.config/aconfmgr/: 10-ignores.sh  20-base.sh  21-vfio.sh  30-x11.sh  31-audio.sh  32-tools.sh  40-terminal.sh  41-dev.sh  99-unsorted.sh
prime/.config/aconfmgr/files/: .BUILDINFO  .MTREE  .PKGINFO
python/: .pythonrc.py
spacemacs/: .spacemacs
ssh/.ssh/: config
ssh/.ssh/config.d/: work
vfio/: Gigabyte.RX570.4096.180224.rom  win10.xml
wayland/: README.md
wayland/.config/.claude/: settings.local.json
wayland/.config/hypr/: autostart.conf  autostart.lua  bindings.conf  bindings.lua  envs.conf  envs.lua  hyprland.conf  hyprland.lua  input.conf  input.lua  layout.sh  looknfeel.conf  looknfeel.lua  unfloat.sh
wayland/.config/hypr/apps/: 1password.lua  bitwarden.lua  browser.lua  davinci-resolve.lua  hyprshot.lua  jetbrains.conf  jetbrains.lua  localsend.lua  pip.lua  qemu.lua  retroarch.lua  steam.lua  system.lua  terminals.lua  walker.lua  webcam-overlay.conf  webcam-overlay.lua
wayland/.config/hypr/layouts/: xmonad.lua
wayland/.config/quickshell/: Bar.qml  CpuWidget.qml  KvmStatus.qml  MemWidget.qml  MprisWidget.qml  NetWidget.qml  Separator.qml  StatWidget.qml  TlaLabel.qml  WindowTitle.qml  WorkspaceBar.qml  shell.qml
wayland/.config/waybar/: config.jsonc  cpuinfo.sh  kvm-status.sh  media.sh  pif.sh  style.css  waybar.sh
x11/: .Xresources  .xinitrc
x11/.config/alacritty/: alacritty.yml
x11/.config/conky/: conkydesktop  conkytop  startup.sh
x11/.config/dunst/: dunstrc
x11/.config/gtk-3.0/: bookmarks  settings.ini
x11/.config/polybar/: config  cpuinfo.sh  launch.sh  pulse_sink.sh  spotify.sh  spotify_metadata.sh  updates.sh
x11/.config/rofi/: config  theme.rasi
x11/.config/xmonad/: .gitignore  install.sh  xmonad.hs
x11/.xmonad/: repl  xmonad-testing.cabal  xmonad.backup.hs  xmonad.hs
x11/.xmonad/app/: Main.hs
x11/.xmonad/lib/: ResizableSpacing.hs
x11/.xmonad/src/: xmonad.hs
x11/.xmonad/src/XMonad/: DBus.hs
xmonad/.config/conky/: conkydesktop  conkytop  startup.sh
xmonad/.config/rofi/: config
xmonad/.xmonad/: README.md  ResizableSpacing.hs  cc.py  conkydesktop  conkytop  startup.sh  xmobarrc  xmonad.hs
xmonad/.xmonad/lib/: Dzen.hs
zsh/: .zshrc
zsh/.zsh/: 01-environment.zsh  02-external.zsh  03-history.zsh  04-keybindings.zsh  05-work.zsh  06-aliases.zsh  07-functions.zsh
zsh/.zsh/lib/: fz.sh
(+114 files in other folders)
