------------------------------------------------------------------------------
name:          xmonad-testing
version:       0.13
synopsis:      XMonad Testing Repository
homepage:      http://xmonad.org
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------

executable xmonad-dbus
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, dbus, xmonad-dbus
  default-language: Haskell2010

executable xmonad-testing
  main-is: xmonad.hs
  other-modules: ResizableSpacing, XMonad.DBus
  hs-source-dirs: src
--  ghc-options: -Wall -Werror -fno-warn-missing-signatures -XPatternGuards
  ghc-options: -fno-warn-missing-signatures -XPatternGuards
  build-depends: base, xmonad, xmonad-contrib, X11, dbus, xmonad-dbus